feat:some fixes

--- a/frontend/locales/ru/common.json
+++ b/frontend/locales/ru/common.json
@@ -77,9 +77,14 @@
   "suppliers": {
     "title": "Поставщики",
     "discover": "Найти поставщиков",
-    "noSuppliers": "Поставщики не найдены",
+    "subtitle": "Подключайтесь к поставщикам для просмотра их товаров",
+    "noSuppliers": "Поставщиков пока нет",
+    "noSuppliersSubtext": "Проверьте позже или свяжитесь с поддержкой",
     "requestLink": "Запросить связь",
-    "viewCatalog": "Посмотреть каталог",
+    "viewCatalog": "Посмотреть товары",
+    "linkRequestSent": "Запрос на связь отправлен!",
+    "linkRequestError": "Не удалось отправить запрос на связь",
+    "loadError": "Не удалось загрузить поставщиков",
     "linkStatus": {
       "pending": "Ожидание",
       "accepted": "Подключен",
@@ -87,14 +92,43 @@
       "removed": "Удален"
     }
   },
+  "links": {
+    "title": "Мои связи",
+    "subtitle": "Управляйте связями с поставщиками и получите доступ к их товарам",
+    "noLinks": "Связей пока нет",
+    "noLinksSubtext": "Просмотрите поставщиков для создания связей",
+    "connected": "Подключен",
+    "pending": "Ожидание",
+    "blocked": "Заблокирован",
+    "removed": "Удален",
+    "viewProducts": "Посмотреть товары",
+    "chat": "Чат",
+    "waitingForAccept": "Ожидание подтверждения от поставщика...",
+    "loadError": "Не удалось загрузить связи"
+  },
   "orders": {
     "title": "Мои заказы",
+    "subtitle": "Отслеживайте и управляйте вашими заказами",
     "noOrders": "Заказы не найдены",
+    "noOrdersSubtext": "Начните покупки, чтобы создать первый заказ",
+    "noFilteredOrders": "Нет заказов со статусом {{status}}",
     "orderDetail": "Детали заказа",
+    "orderNumber": "Заказ #{{number}}",
+    "itemCount": "{{count}} товар",
+    "itemCount_plural": "{{count}} товаров",
+    "totalAmount": "Общая сумма:",
+    "loadError": "Не удалось загрузить заказы",
     "status": {
       "created": "Создан",
       "accepted": "Принят",
       "rejected": "Отклонен",
+      "completed": "Завершен",
+      "cancelled": "Отменен"
+    },
+    "filter": {
+      "all": "Все",
+      "pending": "Ожидание",
+      "accepted": "Принят",
       "completed": "Завершен"
     },
     "accept": "Принять заказ",
@@ -106,12 +140,25 @@
     "createdAt": "Создан"
   },
   "complaints": {
-    "title": "Жалобы",
+    "title": "Мои жалобы",
+    "subtitle": "Отслеживайте и управляйте вашими жалобами",
     "create": "Создать жалобу",
+    "newComplaint": "+ Новая жалоба",
     "description": "Описание",
+    "descriptionPlaceholder": "Опишите вашу проблему подробно...",
     "submit": "Отправить жалобу",
     "escalate": "Эскалировать",
     "resolve": "Решить",
+    "complaintNumber": "Жалоба #{{number}}",
+    "linkNumber": "Связь #{{number}}",
+    "supplierNumber": "Поставщик #{{number}}",
+    "selectConnection": "Выберите связь",
+    "selectConnectionError": "Пожалуйста, выберите связь и введите описание",
+    "complaintSubmitted": "Жалоба отправлена",
+    "createError": "Не удалось создать жалобу",
+    "noComplaints": "Жалоб пока нет",
+    "noComplaintsSubtext": "Создайте жалобу, если у вас есть проблема с поставщиком",
+    "created": "Создано",
     "status": {
       "open": "Открыта",
       "inProgress": "В работе",
@@ -121,18 +168,145 @@
   },
   "profile": {
     "title": "Профиль",
+    "subtitle": "Управление настройками аккаунта",
     "myProfile": "Мой профиль",
     "settings": "Настройки",
+    "accountInfo": "Информация об аккаунте",
+    "email": "Email",
+    "accountType": "Тип аккаунта",
+    "consumer": "Покупатель",
+    "supplier": "Поставщик",
+    "password": "Пароль",
+    "changePassword": "Изменить пароль",
+    "newPassword": "Новый пароль",
+    "newPasswordPlaceholder": "Введите новый пароль",
+    "confirmPassword": "Подтвердите пароль",
+    "confirmPasswordPlaceholder": "Подтвердите новый пароль",
     "language": "Язык",
     "theme": "Тема",
     "notifications": "Уведомления",
+    "helpSupport": "Помощь и поддержка",
+    "termsPrivacy": "Условия и конфиденциальность",
     "about": "О приложении",
     "version": "Версия"
+  },
+  "common": {
+    "cancel": "Отмена",
+    "save": "Сохранить"
   },
   "language": {
     "english": "English",
     "russian": "Русский",
     "changeLanguage": "Изменить язык",
     "languageChanged": "Язык изменен на {{language}}"
+  },
+  "dashboard": {
+    "title": "Панель поставщика",
+    "companyInformation": "Информация о компании",
+    "companyName": "Название компании",
+    "description": "Описание",
+    "noCompanyFound": "Компания не найдена",
+    "createProfileSubtext": "Создайте профиль компании, чтобы начать управлять аккаунтом поставщика",
+    "companyNotFound": "Компания не найдена",
+    "createProfileMessage": "Сначала необходимо создать профиль компании."
+  },
+  "products": {
+    "subtitle": "Управляйте товарами в каталоге",
+    "add": "Добавить",
+    "noProducts": "Товары отсутствуют",
+    "noProductsSubtext": "Добавьте товары в ваш каталог",
+    "stock": "Склад",
+    "moq": "Мин. заказ",
+    "moqFull": "Минимальное количество для заказа (МЗ)",
+    "active": "Активен",
+    "inactive": "Неактивен",
+    "addProduct": "Добавить товар",
+    "editProduct": "Редактировать товар",
+    "deleteProduct": "Удалить товар",
+    "deleteConfirm": "Вы уверены, что хотите удалить этот товар?",
+    "name": "Название",
+    "namePlaceholder": "Название товара",
+    "unit": "Единица",
+    "unitPlaceholder": "кг, литр, упаковка и т.д.",
+    "price": "Цена",
+    "fillRequired": "Пожалуйста, заполните все обязательные поля",
+    "productCreated": "Товар создан",
+    "productUpdated": "Товар обновлен",
+    "productDeleted": "Товар удален",
+    "saveError": "Не удалось сохранить товар",
+    "loadError": "Не удалось загрузить товары",
+    "deleteError": "Не удалось удалить товар"
+  },
+  "supplierOrders": {
+    "title": "Заказы клиентов",
+    "subtitle": "Управляйте и обрабатывайте заказы клиентов",
+    "actionRequired": "Требуется действие",
+    "noOrdersSubtext": "Заказы от покупателей появятся здесь"
+  },
+  "supplierComplaints": {
+    "title": "Жалобы клиентов",
+    "subtitle": "Просматривайте и управляйте жалобами клиентов",
+    "noComplaints": "Жалоб пока нет",
+    "noComplaintsSubtext": "Жалобы клиентов появятся здесь",
+    "currentStatus": "Текущий статус",
+    "changeStatus": "Изменить статус",
+    "statusUpdated": "Статус обновлен",
+    "statusUpdateError": "Не удалось обновить статус",
+    "loadError": "Не удалось загрузить жалобы",
+    "close": "Закрыть"
+  },
+  "supplierLinks": {
+    "title": "Запросы на подключение",
+    "subtitle": "Управляйте подключениями покупателей и запросами чата",
+    "noLinks": "Запросов на связь пока нет",
+    "noLinksSubtext": "Покупатели будут отправлять запросы на подключение для просмотра ваших товаров",
+    "consumer": "Покупатель #{{number}}",
+    "linkId": "ID связи: {{id}}",
+    "accept": "Принять",
+    "block": "Заблокировать",
+    "remove": "Удалить",
+    "accepted": "Запрос на связь принят",
+    "blocked": "Связь заблокирована",
+    "removed": "Связь удалена",
+    "blockTitle": "Заблокировать связь",
+    "blockConfirm": "Вы уверены, что хотите заблокировать это подключение?",
+    "removeTitle": "Удалить связь",
+    "removeConfirm": "Вы уверены, что хотите удалить это подключение?",
+    "acceptError": "Не удалось принять запрос",
+    "blockError": "Не удалось заблокировать связь",
+    "removeError": "Не удалось удалить связь",
+    "loadError": "Не удалось загрузить запросы на связь"
+  },
+  "staff": {
+    "title": "Управление персоналом",
+    "subtitle": "Управляйте членами команды и их ролями",
+    "addStaffMember": "Добавить сотрудника",
+    "noStaff": "Сотрудников пока нет",
+    "noStaffSubtext": "Добавьте сотрудников для помощи в управлении вашей учетной записью поставщика",
+    "email": "Электронная почта",
+    "emailPlaceholder": "staff@example.com",
+    "role": "Роль",
+    "selectRole": "Выберите роль",
+    "changeRole": "Изменить роль",
+    "remove": "Удалить",
+    "addStaff": "Добавить сотрудника",
+    "updateRole": "Обновить роль",
+    "deleteStaff": "Удалить сотрудника",
+    "deleteConfirm": "Вы уверены, что хотите удалить этого сотрудника?",
+    "changeRoleTitle": "Изменить роль",
+    "changeRoleConfirm": "Выберите новую роль для {{email}}",
+    "staffAdded": "Сотрудник успешно добавлен",
+    "roleUpdated": "Роль успешно обновлена",
+    "staffDeleted": "Сотрудник успешно удален",
+    "addError": "Не удалось добавить сотрудника",
+    "updateError": "Не удалось обновить роль",
+    "deleteError": "Не удалось удалить сотрудника",
+    "loadError": "Не удалось загрузить сотрудников",
+    "fillRequired": "Пожалуйста, заполните все обязательные поля",
+    "roles": {
+      "SUPPLIER_OWNER": "Владелец",
+      "SUPPLIER_MANAGER": "Менеджер",
+      "SUPPLIER_SALES": "Продажи"
+    }
   }
 }
