--- a/frontend/locales/en/common.json
+++ b/frontend/locales/en/common.json
@@ -76,10 +76,15 @@
   },
   "suppliers": {
     "title": "Suppliers",
-    "discover": "Discover Suppliers",
-    "noSuppliers": "No suppliers found",
+    "discover": "Find Suppliers",
+    "subtitle": "Connect with suppliers to view their products",
+    "noSuppliers": "No suppliers available yet",
+    "noSuppliersSubtext": "Check back later or contact support to add suppliers",
     "requestLink": "Request Link",
-    "viewCatalog": "View Catalog",
+    "viewCatalog": "View Products",
+    "linkRequestSent": "Link request sent!",
+    "linkRequestError": "Failed to send link request",
+    "loadError": "Failed to load suppliers",
     "linkStatus": {
       "pending": "Pending",
       "accepted": "Connected",
@@ -87,14 +92,43 @@
       "removed": "Removed"
     }
   },
+  "links": {
+    "title": "My Connections",
+    "subtitle": "Manage your supplier connections and access their products",
+    "noLinks": "No connections yet",
+    "noLinksSubtext": "Browse suppliers to create connections",
+    "connected": "Connected",
+    "pending": "Pending",
+    "blocked": "Blocked",
+    "removed": "Removed",
+    "viewProducts": "View Products",
+    "chat": "Chat",
+    "waitingForAccept": "Waiting for supplier to accept...",
+    "loadError": "Failed to load connections"
+  },
   "orders": {
     "title": "My Orders",
+    "subtitle": "Track and manage your orders",
     "noOrders": "No orders found",
+    "noOrdersSubtext": "Start shopping to create your first order",
+    "noFilteredOrders": "No {{status}} orders",
     "orderDetail": "Order Details",
+    "orderNumber": "Order #{{number}}",
+    "itemCount": "{{count}} item",
+    "itemCount_plural": "{{count}} items",
+    "totalAmount": "Total Amount:",
+    "loadError": "Failed to load orders",
     "status": {
       "created": "Created",
       "accepted": "Accepted",
       "rejected": "Rejected",
+      "completed": "Completed",
+      "cancelled": "Cancelled"
+    },
+    "filter": {
+      "all": "All",
+      "pending": "Pending",
+      "accepted": "Accepted",
       "completed": "Completed"
     },
     "accept": "Accept Order",
@@ -106,12 +140,25 @@
     "createdAt": "Created"
   },
   "complaints": {
-    "title": "Complaints",
+    "title": "My Complaints",
+    "subtitle": "Track and manage your submitted complaints",
     "create": "Create Complaint",
+    "newComplaint": "+ New Complaint",
     "description": "Description",
+    "descriptionPlaceholder": "Describe your issue in detail...",
     "submit": "Submit Complaint",
     "escalate": "Escalate",
     "resolve": "Resolve",
+    "complaintNumber": "Complaint #{{number}}",
+    "linkNumber": "Link #{{number}}",
+    "supplierNumber": "Supplier #{{number}}",
+    "selectConnection": "Select Connection",
+    "selectConnectionError": "Please select a connection and enter description",
+    "complaintSubmitted": "Complaint submitted",
+    "createError": "Failed to create complaint",
+    "noComplaints": "No complaints yet",
+    "noComplaintsSubtext": "Create a complaint if you have an issue with a supplier",
+    "created": "Created",
     "status": {
       "open": "Open",
       "inProgress": "In Progress",
@@ -121,18 +168,145 @@
   },
   "profile": {
     "title": "Profile",
+    "subtitle": "Manage your account settings",
     "myProfile": "My Profile",
     "settings": "Settings",
+    "accountInfo": "Account Information",
+    "email": "Email",
+    "accountType": "Account Type",
+    "consumer": "Consumer",
+    "supplier": "Supplier",
+    "password": "Password",
+    "changePassword": "Change Password",
+    "newPassword": "New Password",
+    "newPasswordPlaceholder": "Enter new password",
+    "confirmPassword": "Confirm Password",
+    "confirmPasswordPlaceholder": "Confirm new password",
     "language": "Language",
     "theme": "Theme",
     "notifications": "Notifications",
+    "helpSupport": "Help & Support",
+    "termsPrivacy": "Terms & Privacy",
     "about": "About",
     "version": "Version"
+  },
+  "common": {
+    "cancel": "Cancel",
+    "save": "Save"
   },
   "language": {
     "english": "English",
     "russian": "Русский",
     "changeLanguage": "Change Language",
     "languageChanged": "Language changed to {{language}}"
+  },
+  "dashboard": {
+    "title": "Supplier Dashboard",
+    "companyInformation": "Company Information",
+    "companyName": "Company Name",
+    "description": "Description",
+    "noCompanyFound": "No Company Found",
+    "createProfileSubtext": "Create your company profile to get started with managing your supplier account",
+    "companyNotFound": "Company Not Found",
+    "createProfileMessage": "You need to create your company profile first."
+  },
+  "products": {
+    "subtitle": "Manage items in your catalog",
+    "add": "Add",
+    "noProducts": "No products yet",
+    "noProductsSubtext": "Add products to your catalog",
+    "stock": "Stock",
+    "moq": "MOQ",
+    "moqFull": "Minimum Order Quantity (MOQ)",
+    "active": "Active",
+    "inactive": "Inactive",
+    "addProduct": "Add Product",
+    "editProduct": "Edit Product",
+    "deleteProduct": "Delete Product",
+    "deleteConfirm": "Are you sure you want to delete this product?",
+    "name": "Name",
+    "namePlaceholder": "Product name",
+    "unit": "Unit",
+    "unitPlaceholder": "kg, liter, pack, etc.",
+    "price": "Price",
+    "fillRequired": "Please fill in all required fields",
+    "productCreated": "Product created",
+    "productUpdated": "Product updated",
+    "productDeleted": "Product deleted",
+    "saveError": "Failed to save product",
+    "loadError": "Failed to load products",
+    "deleteError": "Failed to delete product"
+  },
+  "supplierOrders": {
+    "title": "Customer Orders",
+    "subtitle": "Manage and fulfill customer orders",
+    "actionRequired": "Action Required",
+    "noOrdersSubtext": "Orders from consumers will appear here"
+  },
+  "supplierComplaints": {
+    "title": "Customer Complaints",
+    "subtitle": "Review and manage customer complaints",
+    "noComplaints": "No complaints yet",
+    "noComplaintsSubtext": "Customer complaints will appear here",
+    "currentStatus": "Current Status",
+    "changeStatus": "Change Status",
+    "statusUpdated": "Status updated",
+    "statusUpdateError": "Failed to update status",
+    "loadError": "Failed to load complaints",
+    "close": "Close"
+  },
+  "supplierLinks": {
+    "title": "Connection Requests",
+    "subtitle": "Manage consumer connections and chat requests",
+    "noLinks": "No link requests yet",
+    "noLinksSubtext": "Consumers will send connection requests to view your products",
+    "consumer": "Consumer #{{number}}",
+    "linkId": "Link ID: {{id}}",
+    "accept": "Accept",
+    "block": "Block",
+    "remove": "Remove",
+    "accepted": "Link request accepted",
+    "blocked": "Link blocked",
+    "removed": "Link removed",
+    "blockTitle": "Block Link",
+    "blockConfirm": "Are you sure you want to block this connection?",
+    "removeTitle": "Remove Link",
+    "removeConfirm": "Are you sure you want to remove this connection?",
+    "acceptError": "Failed to accept link",
+    "blockError": "Failed to block link",
+    "removeError": "Failed to remove link",
+    "loadError": "Failed to load link requests"
+  },
+  "staff": {
+    "title": "Staff Management",
+    "subtitle": "Manage your team members and their roles",
+    "addStaffMember": "Add Staff Member",
+    "noStaff": "No staff members yet",
+    "noStaffSubtext": "Add staff members to help manage your supplier account",
+    "email": "Email",
+    "emailPlaceholder": "staff@example.com",
+    "role": "Role",
+    "selectRole": "Select a role",
+    "changeRole": "Change Role",
+    "remove": "Remove",
+    "addStaff": "Add Staff",
+    "updateRole": "Update Role",
+    "deleteStaff": "Delete Staff Member",
+    "deleteConfirm": "Are you sure you want to remove this staff member?",
+    "changeRoleTitle": "Change Role",
+    "changeRoleConfirm": "Select a new role for {{email}}",
+    "staffAdded": "Staff member added successfully",
+    "roleUpdated": "Role updated successfully",
+    "staffDeleted": "Staff member removed successfully",
+    "addError": "Failed to add staff member",
+    "updateError": "Failed to update role",
+    "deleteError": "Failed to remove staff member",
+    "loadError": "Failed to load staff members",
+    "fillRequired": "Please fill in all required fields",
+    "roles": {
+      "SUPPLIER_OWNER": "Owner",
+      "SUPPLIER_MANAGER": "Manager",
+      "SUPPLIER_SALES": "Sales"
+    }
   }
 }
